--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Welcome</h1>
+<main>
+<h1>Tom Schuster</h1>
+<p>
+	<a href="https://github.com/evilpie/">GitHub<a>
+	<a href="https://twitter.com/evilpies/">twitter</a>
+<p>
+</main>
 </body>
 </html>
