--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <main>
 <h1>Tom Schuster</h1>
 <p>
-	<a href="https://github.com/evilpie/">GitHub<a>
+	<a href="https://github.com/evilpie/">GitHub</a>
 	<a href="https://twitter.com/evilpies/">twitter</a>
 <p>
 </main>
