--- a/index.html
+++ b/index.html
@@ -1,8 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="utf-8" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Tom Schuster</title>
+  <style>
+  :root {
+    box-sizing: border-box;
+
+    font-family: sans-serif;
+
+    background-color: #373840;
+    color: white;
+  }
+
+  body {
+    margin: 0;
+  }
+
+  #container {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+
+    height: 100vh;
+  }
+
+  #container div {
+    padding: 2em;
+
+    background-color: #4b4c55;
+    border-radius: 1.5em;
+  }
+  </style>
 </head>
 <body>
-</body>
+<div id="container">
+<div><h1>Tom Schuster</h1></div>
+</div>
 </html>
