--- a/tests/https-upgrade-origin.html
+++ b/tests/https-upgrade-origin.html
@@ -6,6 +6,6 @@
     let image = new Image();
     image.crossOrigin = "anonymous";
     // image.src = "http://placekitten.com/200/300";
-    image.src = "http://httpbin.org/redirect-to?url=http%3A%2F%2Fplacekitten.com%2F200%2F300"
+    image.src = "https://httpbin.org/redirect-to?url=https%3A%2F%2Fplacekitten.com%2F200%2F300"
   </script>
 </body></html>
