--- a/testing/csp-iframe-srcdoc.html
+++ b/testing/csp-iframe-srcdoc.html
@@ -6,8 +6,18 @@
 
   <meta http-equiv="Content-Security-Policy" content="img-src 'none'">
   <title></title>
+
+  <style>
+    iframe {
+      border: 1px dotted black;
+      width: 100px;
+      height: 100px;
+    }
+  </style>
 </head>
 <body>
+
+<iframe src="https://www.mozilla.org/media/protocol/img/logos/firefox/logo.fedb52c912d6.svg"></iframe>
 
 <iframe srcdoc="<img src=https://www.mozilla.org/media/protocol/img/logos/firefox/logo.fedb52c912d6.svg>"></iframe>
 
