--- a/testing/external-interface/index.html
+++ b/testing/external-interface/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
 
-<object id="flash" width="100" height="100">
+<object width="100" height="100">
     <param name="movie" value="test.swf" />
     <param name="allowScriptAccess" value="always" />
-    <embed src="test.swf" width="100" height="100"></embed>
+    <embed id="flash-embed" src="test.swf" width="100" height="100"></embed>
 </object>
 
 <button onclick="test()">Run Test</button>
 
 <script>
 function test() {
-  let flash = document.getElementById("flash");
+  let flash = document.getElementById("flash-embed");
 
   console.log("a", flash.a({a: 1, b: 2}));
   console.log("b", flash.b());
