--- a/testing/parser-security.html
+++ b/testing/parser-security.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 <meta http-equiv="Content-Security-Policy" content="img-src 'self';">
 </head>
@@ -35,11 +37,13 @@ let log = document.getElementById("log");
 
 for (let [name, parse] of Object.entries(PARSERS)) {
   parse(`<img src="http://example.com/image?name=${escape(name)}"></img>`);
-  log.textContent += `Parsed using ${name}\n`;
+  log.textContent += `Parsed using « ${name} »\n`;
 }
 
 window.addEventListener("securitypolicyviolation", event => {
   let url = new URL(event.blockedURI);
-  log.textContent += `Got a request for ${url.searchParams.get("name")}\n`;
+  log.textContent += `Got a request for « ${url.searchParams.get("name")} »\n`;
 })
 </script>
+</body>
+</html>
