--- a/testing/parser-security.html
+++ b/testing/parser-security.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Security-Policy" content="img-src 'self';">
+  <meta http-equiv="Content-Security-Policy" content="img-src 'self'; media-src 'none';">
 </head>
 <body>
 
@@ -38,7 +38,6 @@ const PARSERS = {
   },
 
   XMLHttpRequest(string) {
-    console.log("xml");
     let {promise, resolve, reject} = Promise.withResolvers();
     const xhr = new XMLHttpRequest();
     xhr.open("GET", "data:text/html," + string);
@@ -59,11 +58,13 @@ let log = document.getElementById("log");
 window.addEventListener("securitypolicyviolation", event => {
   console.log("securitypolicyviolation", event);
   let url = new URL(event.blockedURI);
-  log.textContent += `Got a request for « ${url.searchParams.get("name")} »!\n`;
+  log.textContent += `Got a request for « ${url.searchParams.get("name")} »:\n\t${url}\n`;
 })
 
 for (let [name, parse] of Object.entries(PARSERS)) {
-  let html = await parse(`<img src="http://example.com/image?name=${escape(name)}"></img>`);
+  let html = await parse(`<svg><image href="https://i.imgur.com/tZKQP6R.png?name=${escape(name)}"/></svg>`);
+  // let html = await parse(`<img src="http://example.com/image?name=${escape(name)}"></img>`);
+  // let html = await parse(`<object type="image/png" data="https://i.imgur.com/tZKQP6R.png" width="100" height="100"></object>`);
   log.textContent += `Parsed using « ${name} »:\n\t${html}\n`;
 }
 </script>
