--- a/testing/favicon/index.html
+++ b/testing/favicon/index.html
@@ -3,43 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Favicon Test Page</title>
-
-  <link rel="icon">
 </head>
 <body>
-
-<style>
-label {
-  line-height: 48px;
-}
-
-img {
-  vertical-align: middle;
-  margin-bottom: 4px;
-  width: 24px;
-  height: 24px;
-}
-</style>
-
-
-<form>
-  <label><input type="radio" id="apng" name="favicon"> APNG <img src="animation.png"/ ></label>
-  <label><input type="radio" id="svg" name="favicon" checked> animated SVG <img src="animation.svg"/ ></label>
-</form>
-
-<script>
-let link = document.querySelector("link[rel=icon]")
-let form = document.querySelector("form");
-
-form.addEventListener("change", e => {
-  if (e.target.id == "apng") {
-    link.href = "animation.png";
-  } else if (e.target.id == "svg") {
-    link.href = "animation.svg"
-  }
-});
-
+<ul>
+  <li><a href="svg.html">SVG</a></li>
+  <li><a href="png.html">animated PNG</a></li>
+</ul>
 </script>
-
 </body>
 </html>
