--- a/testing/object-embed/index.html
+++ b/testing/object-embed/index.html
@@ -8,19 +8,19 @@
 <body>
 
 <h1>iframe</h1>
-<iframe src="/pass_image"></iframe>
+<iframe src="pass_image"></iframe>
 
 <hr>
 <h1>img</h1>
-<img src="/pass_image">
+<img src="pass_image">
 
 <hr>
 <h1>object</h1>
-<object data="/pass_image"></object>
+<object data="pass_image"></object>
 
 <hr>
 <h1>object type=image/png</h1>
-<object type="image/png" data="/pass_image"></object>
+<object type="image/png" data="pass_image"></object>
 
 </body>
 </html>
