More test cases when loading HTML

--- a/testing/object-embed/index.html
+++ b/testing/object-embed/index.html
@@ -22,5 +22,15 @@
 <h1>object type=image/png</h1>
 <object type="image/png" data="pass_image"></object>
 
+<hr>
+<h1>object type=image/png</h1>
+<p><em>Loading test.html</em> (<code>Content-Type: text/html</code>)</p>
+<object type="image/png" data="test.html"></object>
+
+<hr>
+<h1>object type=image/png</h1>
+<p><em>Loading html_text</em> (<code>Content-Type: application/octet-stream</code>)</p>
+<object type="image/png" data="html_text"></object>
+
 </body>
 </html>
