--- a/testing/object-embed/index.html
+++ b/testing/object-embed/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>object element - type attribute</title>
 </head>
 <body>
 
